Removed Test_programs from build
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6843 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ MMJAVACODE = MMCoreJ_wrap mmstudio acqEngine autofocus plugins scripts
 endif
 
 if BUILD_APP
-APP = MMCore $(MMJAVACODE) Test_Programs
+APP = MMCore $(MMJAVACODE) 
 endif
 
 if BUILD_PYTHON
