correct 'clean' target name
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6904 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/SlideExplorer/build.xml
+++ b/plugins/SlideExplorer/build.xml
@@ -53,7 +53,7 @@
 		<copy file="SlideExplorer.jar" todir="${MMPluginsDir-inst}" />
 	</target>
 	
-	<target name="cleanMMSlideExplorer" description="Delete the SlideExplorer build files.">
+	<target name="clean" description="Delete the SlideExplorer build files.">
 		<delete dir="build" />
 		<delete file="SlideExplorer.jar" />
 	</target>
