--- a/Test_Programs/configure.in
+++ b/Test_Programs/configure.in
@@ -23,7 +23,7 @@ AC_HEADER_STDC
 AC_CHECK_FUNCS([memset])
 AC_CHECK_LIB(dl, dlopen) # for dynamic linking on linux
 
-AC_CONFIG_FILES(Makefile Test_MMCore/Makefile ModuleTest/Makefile)
+AC_CONFIG_FILES(Makefile ModuleTest/Makefile)
 
 #---------------------------------------------------
 # Check for ZLIB
