incorporate some changes to DemoCamera, update included binaries (TODO - always grab binaries from build!)
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@7310 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_Programs/MMCoreTest/demo&ImageProc.cfg
+++ b/Test_Programs/MMCoreTest/demo&ImageProc.cfg
@@ -9,7 +9,7 @@ Device,DStage,DemoCamera,DStage
 Device,DXYStage,DemoCamera,DXYStage
 Device,DLightPath,DemoCamera,DLightPath
 Device,DShutter,DemoCamera,DShutter
-Device,DemoTranspose,DemoCamera,DemoTranspose
+Device,TransposeProcessor,DemoCamera,TransposeProcessor
 Device,DOptovar,DemoCamera,DOptovar
 Device,DObjective,DemoCamera,DObjective
 Device,Emission,DemoCamera,DWheel
