fix projector plugin build.xml
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@7335 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/Projector/build.xml
+++ b/plugins/Projector/build.xml
@@ -4,7 +4,7 @@
 <project name="MMProjector" default="build">
 
 	<!-- Specify the system path to the ImageJ root directory -->
-	<property name="InstallRoot" value="../../Install/micro-manager"/>
+	<property name="InstallRoot" value="../../Install_AllPlatforms/micro-manager"/>
 
 	<!-- Do not modify from this point on -->
 	<property name="MMPluginDir" value="../../bin_Win32/plugins/Micro-Manager"/>
