Fix issue with serial ports not being configured correctly when re-initializing after discovering ports.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@7344 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/Makefile.am
+++ b/mmstudio/Makefile.am
@@ -61,6 +61,8 @@ MMJ_.jar:  \
 	$(srcdir)/src/org/micromanager/conf/MMConfigFileException.java \
 	$(srcdir)/src/org/micromanager/conf/MicroscopeModel.java \
 	$(srcdir)/src/org/micromanager/conf/PagePanel.java \
+	$(srcdir)/src/org/micromanager/conf/PeripheralDevicesPage.java \
+	$(srcdir)/src/org/micromanager/conf/PeripheralDevicesPreInitializationPropertiesPage.java \
 	$(srcdir)/src/org/micromanager/conf/PropertyTableModel.java \
 	$(srcdir)/src/org/micromanager/conf/RolesPage.java \
 	$(srcdir)/src/org/micromanager/conf/Setting.java \
