Remove leftover references to ACE in devkit
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@7369 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_Programs/Test_MMCore_devkit/Test_MMCore_devkit.vcproj
+++ b/Test_Programs/Test_MMCore_devkit/Test_MMCore_devkit.vcproj
@@ -63,10 +63,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="MMCored.lib aced.lib"
+				AdditionalDependencies="MMCored.lib"
 				OutputFile="$(OutDir)/Test_MMCore.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\lib;..\ ..\..\3rdparty\ACE_wrappers_5.5\lib "
+				AdditionalLibraryDirectories="..\..\lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/Test_MMCore.pdb"
 				SubSystem="1"
@@ -142,10 +142,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ace.lib MMCore.lib"
+				AdditionalDependencies="MMCore.lib"
 				OutputFile="$(OutDir)/Test_MMCore.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\..\lib;..\ ..\..\3rdparty\ACE_wrappers_5.5\lib "
+				AdditionalLibraryDirectories="..\..\lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
