Remove more ACE references
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@7371 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_Programs/Test_MMCore_devkit/Test_MMCore_devkit.vcproj
+++ b/Test_Programs/Test_MMCore_devkit/Test_MMCore_devkit.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\3rdparty\ACE_wrappers"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;_M_IX86"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\3rdparty\ACE_wrappers"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="true"
