--- a/Test_Programs/configure.in
+++ b/Test_Programs/configure.in
@@ -36,7 +36,7 @@ if test x$ZLIBINCDIR = xNO; then
 else 
    AC_CHECK_HEADERS([$ZLIBINCDIR/zlib.h])
    if test -z "$LIBZLIB" ; then
-      AC_FIND_FILE([libz.a], [/usr/local/$ARCH/lib /usr/lib /usr/lib64], ZLIBLIBDIR)
+      AC_FIND_FILE([libz.a], [/usr/local/$ARCH/lib /usr/local/lib /usr/lib /usr/lib64 /usr/lib/$build_platform-$build_os], ZLIBLIBDIR)
       if test x$ZLIBLIBDIR = xNO; then
          AC_MSG_RESULT([zlib not found])
          exit 1
