--- a/Makefile.am
+++ b/Makefile.am
@@ -22,8 +22,7 @@ EXTRA_DIST = mmbuild.bat lib/empty.txt build_instructions_win.html build_instruc
 SUBDIRS =  MMDevice $(APP) DeviceAdapters $(SECRETDEVICEADAPTERS) $(PYTHONDIR) 
 
 
-doxygen:
-	$(srcdir)/docygen/out/MMDevice
+dox: 
 	test -d $(srcdir)/doxygen/out/MMDevice || mkdir $(srcdir)/doxygen/out/MMDevice
 	rm -rf $(srcdir)/doxygen/out/MMDevice/*
 	doxygen doxygen/MMDevice
