progress on Makefile.am
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@7607 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/autofocus/ZippyFocus/Makefile.am
+++ b/autofocus/ZippyFocus/Makefile.am
@@ -1,12 +1,9 @@
 ZippyFocus.jar: \
-	$(srcdir)/src/org/micromanager/mm.clj \
-	$(srcdir)/src/org/micromanager/acq_engine.clj \
-	$(srcdir)/src/org/micromanager/sequence_generator.clj
 	test -d classes || mkdir classes
 	rm -rf classes/*
 	cp -R src/org classes/
-	java -server -cp ../MMCoreJ_wrap/MMCoreJ.jar:$(CLASSEXT)/clojure.jar:$(IJJARPATH):../mmstudio/MMJ_.jar:$(CLASSEXT)/bsh-2.0b4.jar:./src -Djava.library.path=. -Djava.awt.headless=true -Dclojure.compile.path=classes -server clojure.lang.Compile org.micromanager.zippy-focus.core
-	jar cvf MMAcqEngine.jar -C classes/ .    
+	java -server -cp src:../../mmstudio/MMJ_.jar:../../../3rdpartypublic/classext/clojure.jar:../../acqEngine/MMAcqEngine.jar:../../MMCoreJ_wrap/MMCoreJ.jar:../../../3rdpartypublic/classext/* -Djava.library.path=. -Djava.awt.headless=true -Dclojure.compile.path=classes -server clojure.lang.Compile zippy-focus.core	
+	jar cvf ZippyFocus.jar -C classes/ .    
 
 all: ../mmstudio ZippyFocus.jar
 
