--- a/DeviceKit/LibraryTest/LibraryTest.vcproj
+++ b/DeviceKit/LibraryTest/LibraryTest.vcproj
@@ -183,6 +183,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\Common\DeviceTypes.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
