updated project files for release builds
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@7712 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/DeviceKit/CoreTest/MMCoreTest.vcproj
+++ b/DeviceKit/CoreTest/MMCoreTest.vcproj
@@ -211,7 +211,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="MMCorer.lib Iphlpapi.lib"
+				AdditionalDependencies="MMCore.lib Iphlpapi.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;..\..\..\3rdpartypublic\boost\stage_$(PlatformName)\lib&quot;;&quot;..\..\lib_$(PlatformName)&quot;"
 				GenerateDebugInformation="true"
