--- a/DeviceKit/DeviceTest/DeviceTest.vcproj
+++ b/DeviceKit/DeviceTest/DeviceTest.vcproj
@@ -134,7 +134,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="zlib.lib mmcored.lib Iphlpapi.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;..\..\..\3rdpartypublic\boost\stage_$(PlatformName)\lib&quot;;&quot;..\..\..\3rdpartypublic\zlib\bin_$(PlatformName)&quot;;&quot;..\..\lib_$(PlatformName)&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
