Change from Test_Programs to DeviceKit
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@7835 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,12 @@ endif
 
 EXTRA_DIST = mmbuild.bat lib/empty.txt build_instructions_win.html build_instructions_unix.txt
 
-SUBDIRS =  MMDevice $(APP) DeviceAdapters $(SECRETDEVICEADAPTERS) $(PYTHONDIR) 
+SUBDIRS =  MMDevice $(APP) DeviceAdapters $(SECRETDEVICEADAPTERS) $(PYTHONDIR)
+
+devicekit: 
+	cd DeviceKit
+	make
+	cd ..
 
 
 dox: 
