--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -96,10 +96,11 @@ Gaussian.jar:  \
 	$(srcdir)/Gaussian/source/edu/valelab/GaussianFit/NearestPoint2D.java \
 	$(srcdir)/Gaussian/source/edu/valelab/GaussianFit/ParametricGaussianFunction.java \
 	$(srcdir)/Gaussian/source/edu/valelab/GaussianFit/ProgressThread.java \
-	$(srcdir)/Gaussian/source/edu/valelab/GaussianFit/Terms.java 
+	$(srcdir)/Gaussian/source/edu/valelab/GaussianFit/Terms.java \
+	$(srcdir)/Gaussian/source/ags/utils/KdTree.java
 	test -d build || mkdir build
 	rm -rf build/*
-	$(JAVAC) -source 1.5 -target 1.5 -sourcepath $(srcdir):. -classpath $(IJJARPATH):$(BSHJARPATH):$(COMMONSMATHJARPATH):$(SWINGLAYOUTJARPATH):$(JFREECHARTJARPATH):../bin/MMCoreJ.jar:../mmstudio/MMJ_.jar:$(CLASSEXT)/TSFProto.jar:$(CLASSEXT)/gproto.jar:$(CLASSEXT)/lwm-0.0.2.jar:. $(srcdir)/Gaussian/source/GaussianTrack_.java $(srcdir)/Gaussian/source/edu/valelab/GaussianFit/*.java -d build
+	$(JAVAC) -source 1.5 -target 1.5 -sourcepath $(srcdir):. -classpath $(IJJARPATH):$(BSHJARPATH):$(COMMONSMATHJARPATH):$(SWINGLAYOUTJARPATH):$(JFREECHARTJARPATH):../bin/MMCoreJ.jar:../mmstudio/MMJ_.jar:$(CLASSEXT)/TSFProto.jar:$(CLASSEXT)/gproto.jar:$(CLASSEXT)/lwm-0.0.2.jar:. $(srcdir)/Gaussian/source/GaussianTrack_.java $(srcdir)/Gaussian/source/edu/valelab/GaussianFit/*.java $(srcdir)/Gaussian/source/ags/utils/*.java -d build
 	cd build && jar cf ../Gaussian.jar * 
 
 DataBrowser.jar: \
